--- a/app/src/main/res/layout/activity_update.xml
+++ b/app/src/main/res/layout/activity_update.xml
@@ -55,6 +55,42 @@
         android:id="@+id/updateEmail"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/updateMobile"
+        android:hint="Mobile Here"
+        android:layout_marginRight="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/updateLatidude"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/updateEmail"
+        android:hint="Email Here"
+        android:layout_marginRight="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/updateLongitude"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/updateLatidude"
+        android:hint="Email Here"
+        android:layout_marginRight="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/updateAddressName"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/updateLongitude"
+        android:hint="Email Here"
+        android:layout_marginRight="20dp" />
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/updateAddress"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/updateAddressName"
         android:hint="Email Here"
         android:layout_marginRight="20dp" />
 
@@ -62,7 +98,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:text="Update"
-        android:layout_below="@+id/updateEmail"
+        android:layout_below="@+id/updateAddress"
         android:onClick="updateContact"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
